deploy: 2c43c1e8aec4f3e48ea7dcaed12295cb7ba2538f

--- a/2020.html
+++ b/2020.html
@@ -16,19 +16,22 @@
     <div class="col-lg-auto">
 
         <h1>日本所属の言語処理論文被引用数ランキング (2020年)</h1>
-        <p class="text-right">最終更新: 2022-04-16 14:40:55.225416+09:00</p>
+        <p class="text-right">最終更新: 2022-04-16 15:50:40.319531+09:00</p>
 
         <div>
             <p>日本の組織を所属とする者が、2020年に言語処理のトップカンファレンスもしくはトップ論文誌で発表した論文一覧です (<a href="2021.html">2021年版</a>、<a
                     href="2020.html">2020年版</a>、<a href="2019.html">2019年版</a>、<a href="2018.html">2018年版</a>、<a
-                    href="2017.html">2017年版</a>、<a href="2016.html">2016年版</a>)。対象は
+                    href="2017.html">2017年版</a>、<a href="2016.html">2016年版</a>、<a href="2015.html">2015年版</a>、<a
+                    href="2014.html">2014年版</a>)。対象は
                 TACL、ACL、EMNLP、NAACL、EACL です
                 (Findings は除外)。Industry、Student、Demo 論文も含みます。</p>
             <ul>
                 <li>被引用数A：第一著者に被引用数の半分を配分し、残りの半分は以降の著者で等分。</li>
                 <li>被引用数F：第一著者に被引用数の全部を配分します。</li>
                 <li>一人の著者に複数の所属がある場合は等分。</li>
-                <li>論文データは <a href="https://murawaki.org/misc/japan-nlp-2020.html">村脇先生のブログ</a> に機械的に従います。
+                
+                    <li>論文データは <a href="https://murawaki.org/misc/japan-nlp-2020.html">村脇先生のブログ</a> に機械的に従います。
+                
                 </li>
                 <li>被引用数データは <a href="https://api.semanticscholar.org/graph/v1">Semantic Scholar</a> より。</li>
                 <li>毎週月曜日朝５時に自動更新。</li>
@@ -362,7 +365,7 @@
                     <tr>
                         <td style="vertical-align: middle;">71</td>
                         <td style="vertical-align: middle;">DEMO</td>
-                        <td style="vertical-align: middle;"> Hirofumi Inaguma (京大)<br> Shun Kiyono (理研)<br> Kevin Duh (ジョンズホプキンス大)<br> Shigeki Karita (NTT)<br> Nelson Yalta (早大)<br> Tomoki Hayashi (Human Dataware Lab; 名大)<br> Shinji Watanabe (ジョンズホプキンス)<br>
+                        <td style="vertical-align: middle;"> Hirofumi Inaguma (京大)<br> Shun Kiyono (理研)<br> Kevin Duh (ジョンズホプキンス大)<br> Shigeki Karita (NTT)<br> Nelson Yalta (早大)<br> Tomoki Hayashi (名大; Human Dataware Lab)<br> Shinji Watanabe (ジョンズホプキンス)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="https://www.aclweb.org/anthology/2020.acl-demos.34">ESPnet-ST: All-in-One Speech Translation Toolkit</a></td>
                     </tr>
@@ -378,7 +381,7 @@
                     <tr>
                         <td style="vertical-align: middle;">49</td>
                         <td style="vertical-align: middle;">LONG</td>
-                        <td style="vertical-align: middle;"> Goro Kobayashi (東北大)<br> Tatsuki Kuribayashi (東北大; Langsmith)<br> Sho Yokoi (東北大; 理研)<br> Kentaro Inui (東北大; 理研)<br>
+                        <td style="vertical-align: middle;"> Goro Kobayashi (東北大)<br> Tatsuki Kuribayashi (Langsmith; 東北大)<br> Sho Yokoi (東北大; 理研)<br> Kentaro Inui (東北大; 理研)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="https://www.aclweb.org/anthology/2020.emnlp-main.574">Attention Is Not Only a Weight: Analyzing Transformers with Vector Norms</a></td>
                     </tr>
@@ -394,7 +397,7 @@
                     <tr>
                         <td style="vertical-align: middle;">35</td>
                         <td style="vertical-align: middle;">LONG</td>
-                        <td style="vertical-align: middle;"> Takashi Shibuya (CMU; Sony)<br> Eduard Hovy (CMU)<br>
+                        <td style="vertical-align: middle;"> Takashi Shibuya (Sony; CMU)<br> Eduard Hovy (CMU)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="https://www.aclweb.org/anthology/2020.tacl-1.39">Nested Named Entity Recognition via Second-best Sequence Learning and Decoding</a></td>
                     </tr>
@@ -442,7 +445,7 @@
                     <tr>
                         <td style="vertical-align: middle;">21</td>
                         <td style="vertical-align: middle;">SHORT</td>
-                        <td style="vertical-align: middle;"> Naoya Inoue (東北大; 理研)<br> Pontus Stenetorp (UCL; 理研)<br> Kentaro Inui (東北大; 理研)<br>
+                        <td style="vertical-align: middle;"> Naoya Inoue (東北大; 理研)<br> Pontus Stenetorp (理研; UCL)<br> Kentaro Inui (東北大; 理研)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="https://www.aclweb.org/anthology/2020.acl-main.602">R4C: A Benchmark for Evaluating RC Systems to Get the Right Answer for the Right Reason</a></td>
                     </tr>
@@ -530,7 +533,7 @@
                     <tr>
                         <td style="vertical-align: middle;">12</td>
                         <td style="vertical-align: middle;">SHORT</td>
-                        <td style="vertical-align: middle;"> Hiroki Ouchi (東北大; 理研)<br> Jun Suzuki (東北大; 理研)<br> Sosuke Kobayashi (PFN; 東北大)<br> Sho Yokoi (東北大; 理研)<br> Tatsuki Kuribayashi (東北大; Langsmith)<br> Ryuto Konno (東北大)<br> Kentaro Inui (東北大; 理研)<br>
+                        <td style="vertical-align: middle;"> Hiroki Ouchi (東北大; 理研)<br> Jun Suzuki (東北大; 理研)<br> Sosuke Kobayashi (東北大; PFN)<br> Sho Yokoi (東北大; 理研)<br> Tatsuki Kuribayashi (Langsmith; 東北大)<br> Ryuto Konno (東北大)<br> Kentaro Inui (東北大; 理研)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="https://www.aclweb.org/anthology/2020.acl-main.575">Instance-Based Learning of Span Representations: A Case Study through Named Entity Recognition</a></td>
                     </tr>
@@ -538,7 +541,7 @@
                     <tr>
                         <td style="vertical-align: middle;">12</td>
                         <td style="vertical-align: middle;">LONG</td>
-                        <td style="vertical-align: middle;"> Xanh Ho (総研大; NII)<br> Anh-Khoa Duong Nguyen (産総研)<br> Saku Sugawara (NII)<br> Akiko Aizawa (総研大; NII)<br>
+                        <td style="vertical-align: middle;"> Xanh Ho (NII; 総研大)<br> Anh-Khoa Duong Nguyen (産総研)<br> Saku Sugawara (NII)<br> Akiko Aizawa (NII; 総研大)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="https://www.aclweb.org/anthology/2020.coling-main.580">Constructing A Multi-hop QA Dataset for Comprehensive Evaluation of Reasoning Steps</a></td>
                     </tr>
@@ -554,7 +557,7 @@
                     <tr>
                         <td style="vertical-align: middle;">11</td>
                         <td style="vertical-align: middle;">SHORT</td>
-                        <td style="vertical-align: middle;"> Kosuke Takahashi (NAIST)<br> Katsuhito Sudoh (JST; NAIST)<br> Satoshi Nakamura (NAIST)<br>
+                        <td style="vertical-align: middle;"> Kosuke Takahashi (NAIST)<br> Katsuhito Sudoh (NAIST; JST)<br> Satoshi Nakamura (NAIST)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="https://www.aclweb.org/anthology/2020.acl-main.327">Automatic Machine Translation Evaluation using Source Language Inputs and Cross-lingual Language Model</a></td>
                     </tr>
@@ -618,7 +621,7 @@
                     <tr>
                         <td style="vertical-align: middle;">7</td>
                         <td style="vertical-align: middle;">LONG</td>
-                        <td style="vertical-align: middle;"> Zixia Jia (中国科学院; 中国科学院大; 上海科技大)<br> Youmi Ma (東工大)<br> Jiong Cai (中国科学院; 中国科学院大; 上海科技大)<br> Kewei Tu (中国科学院; 中国科学院大; 上海科技大)<br>
+                        <td style="vertical-align: middle;"> Zixia Jia (上海科技大; 中国科学院大; 中国科学院)<br> Youmi Ma (東工大)<br> Jiong Cai (上海科技大; 中国科学院大; 中国科学院)<br> Kewei Tu (上海科技大; 中国科学院大; 中国科学院)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="https://www.aclweb.org/anthology/2020.acl-main.607">Semi-Supervised Semantic Dependency Parsing Using CRF Autoencoders</a></td>
                     </tr>
@@ -730,7 +733,7 @@
                     <tr>
                         <td style="vertical-align: middle;">4</td>
                         <td style="vertical-align: middle;">DEMO</td>
-                        <td style="vertical-align: middle;"> Mohammad Golam Sohrab (産総研)<br> Khoa Duong (産総研)<br> Makoto Miwa (産総研; 豊田工大)<br> Goran Topić (産総研)<br> Ikeda Masami (産総研)<br> Takamura Hiroya (産総研)<br>
+                        <td style="vertical-align: middle;"> Mohammad Golam Sohrab (産総研)<br> Khoa Duong (産総研)<br> Makoto Miwa (豊田工大; 産総研)<br> Goran Topić (産総研)<br> Ikeda Masami (産総研)<br> Takamura Hiroya (産総研)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="https://www.aclweb.org/anthology/2020.emnlp-demos.24">BENNERD: A Neural Named Entity Linking System for COVID-19</a></td>
                     </tr>
@@ -738,7 +741,7 @@
                     <tr>
                         <td style="vertical-align: middle;">4</td>
                         <td style="vertical-align: middle;">LONG</td>
-                        <td style="vertical-align: middle;"> Yui Uehara (産総研)<br> Tatsuya Ishigaki (産総研)<br> Kasumi Aoki (お茶大)<br> Keiichi Goshima (産総研; 早大)<br> Hiroshi Noji (産総研)<br> Ichiro Kobayashi (お茶大; 産総研)<br> Hiroya Takamura (東工大; 産総研)<br> Yusuke Miyao (産総研)<br>
+                        <td style="vertical-align: middle;"> Yui Uehara (産総研)<br> Tatsuya Ishigaki (産総研)<br> Kasumi Aoki (お茶大)<br> Keiichi Goshima (早大; 産総研)<br> Hiroshi Noji (産総研)<br> Ichiro Kobayashi (お茶大; 産総研)<br> Hiroya Takamura (東工大; 産総研)<br> Yusuke Miyao (産総研)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="https://www.aclweb.org/anthology/2020.coling-main.213">Learning with Contrastive Examples for Data-to-Text Generation</a></td>
                     </tr>
@@ -770,7 +773,7 @@
                     <tr>
                         <td style="vertical-align: middle;">4</td>
                         <td style="vertical-align: middle;">LONG</td>
-                        <td style="vertical-align: middle;"> Maolin Li (産総研; マンチェスター大)<br> Hiroya Takamura (東工大; 産総研)<br> Sophia Ananiadou (産総研; マンチェスター大; Alan Turing Institute)<br>
+                        <td style="vertical-align: middle;"> Maolin Li (産総研; マンチェスター大)<br> Hiroya Takamura (東工大; 産総研)<br> Sophia Ananiadou (Alan Turing Institute; 産総研; マンチェスター大)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="https://www.aclweb.org/anthology/2020.coling-main.507">A Neural Model for Aggregating Coreference Annotation in Crowdsourcing</a></td>
                     </tr>
@@ -882,7 +885,7 @@
                     <tr>
                         <td style="vertical-align: middle;">3</td>
                         <td style="vertical-align: middle;">SHORT</td>
-                        <td style="vertical-align: middle;"> Ryoma Yoshimura (都立大)<br> Masahiro Kaneko (都立大)<br> Tomoyuki Kajiwara (阪大; 都立大)<br> Mamoru Komachi (都立大)<br>
+                        <td style="vertical-align: middle;"> Ryoma Yoshimura (都立大)<br> Masahiro Kaneko (都立大)<br> Tomoyuki Kajiwara (都立大; 阪大)<br> Mamoru Komachi (都立大)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="https://www.aclweb.org/anthology/2020.coling-main.573">SOME: Reference-less Sub-Metrics Optimized for Manual Evaluations of Grammatical Error Correction</a></td>
                     </tr>
@@ -922,7 +925,7 @@
                     <tr>
                         <td style="vertical-align: middle;">2</td>
                         <td style="vertical-align: middle;">DEMO</td>
-                        <td style="vertical-align: middle;"> Takumi Ito (東北大; Langsmith)<br> Tatsuki Kuribayashi (東北大; Langsmith)<br> Masatoshi Hidaka (エッジインテリジェンス)<br> Jun Suzuki (東北大; 理研)<br> Kentaro Inui (東北大; 理研)<br>
+                        <td style="vertical-align: middle;"> Takumi Ito (Langsmith; 東北大)<br> Tatsuki Kuribayashi (Langsmith; 東北大)<br> Masatoshi Hidaka (エッジインテリジェンス)<br> Jun Suzuki (東北大; 理研)<br> Kentaro Inui (東北大; 理研)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="https://www.aclweb.org/anthology/2020.emnlp-demos.28">Langsmith: An Interactive Academic Text Revision System</a></td>
                     </tr>
@@ -930,7 +933,7 @@
                     <tr>
                         <td style="vertical-align: middle;">2</td>
                         <td style="vertical-align: middle;">LONG</td>
-                        <td style="vertical-align: middle;"> Shogo Fujita (東工大)<br> Hidetaka Kamigaito (東工大)<br> Hiroya Takamura (東工大; 産総研)<br> Manabu Okumura (東工大)<br>
+                        <td style="vertical-align: middle;"> Shogo Fujita (東工大)<br> Hidetaka Kamigaito (東工大)<br> Hiroya Takamura (産総研; 東工大)<br> Manabu Okumura (東工大)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="https://www.aclweb.org/anthology/2020.coling-main.28">Pointing to Subwords for Generating Function Names in Source Code</a></td>
                     </tr>
@@ -1010,7 +1013,7 @@
                     <tr>
                         <td style="vertical-align: middle;">2</td>
                         <td style="vertical-align: middle;">LONG</td>
-                        <td style="vertical-align: middle;"> Namgi Han (総研大; 産総研; NII)<br> Goran Topic (産総研)<br> Hiroshi Noji (産総研)<br> Hiroya Takamura (東工大; 産総研)<br> Yusuke Miyao (産総研; 東大)<br>
+                        <td style="vertical-align: middle;"> Namgi Han (総研大; NII; 産総研)<br> Goran Topic (産総研)<br> Hiroshi Noji (産総研)<br> Hiroya Takamura (東工大; 産総研)<br> Yusuke Miyao (産総研; 東大)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="https://www.aclweb.org/anthology/2020.coling-main.465">An empirical analysis of existing systems and datasets toward general simple question answering</a></td>
                     </tr>
@@ -1074,7 +1077,7 @@
                     <tr>
                         <td style="vertical-align: middle;">1</td>
                         <td style="vertical-align: middle;">LONG</td>
-                        <td style="vertical-align: middle;"> Diptesh Kanojia (IITB-Monash; IIT Bombay; モナシュ大)<br> Raj Dabre (NICT)<br> Shubham Dewangan (IIT Bombay)<br> Pushpak Bhattacharyya (IIT Bombay)<br> Gholamreza Haffari (モナシュ大)<br> Malhar Kulkarni (IIT Bombay)<br>
+                        <td style="vertical-align: middle;"> Diptesh Kanojia (IIT Bombay; IITB-Monash; モナシュ大)<br> Raj Dabre (NICT)<br> Shubham Dewangan (IIT Bombay)<br> Pushpak Bhattacharyya (IIT Bombay)<br> Gholamreza Haffari (モナシュ大)<br> Malhar Kulkarni (IIT Bombay)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="https://www.aclweb.org/anthology/2020.coling-main.119">Harnessing Cross-lingual Features to Improve Cognate Detection for Low-resource Languages</a></td>
                     </tr>
@@ -1082,7 +1085,7 @@
                     <tr>
                         <td style="vertical-align: middle;">1</td>
                         <td style="vertical-align: middle;">SHORT</td>
-                        <td style="vertical-align: middle;"> Takaki Otake (東北大)<br> Sho Yokoi (東北大; 理研)<br> Naoya Inoue (東北大; 理研)<br> Ryo Takahashi (東北大; 理研)<br> Tatsuki Kuribayashi (東北大; Langsmith)<br> Kentaro Inui (東北大; 理研)<br>
+                        <td style="vertical-align: middle;"> Takaki Otake (東北大)<br> Sho Yokoi (東北大; 理研)<br> Naoya Inoue (東北大; 理研)<br> Ryo Takahashi (東北大; 理研)<br> Tatsuki Kuribayashi (Langsmith; 東北大)<br> Kentaro Inui (東北大; 理研)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="https://www.aclweb.org/anthology/2020.coling-main.160">Modeling Event Salience in Narratives via Barthes’ Cardinal Functions</a></td>
                     </tr>
@@ -1138,7 +1141,7 @@
                     <tr>
                         <td style="vertical-align: middle;">0</td>
                         <td style="vertical-align: middle;">LONG</td>
-                        <td style="vertical-align: middle;"> Tatsuki Kuribayashi (東北大; Langsmith)<br> Takumi Ito (東北大; Langsmith)<br> Jun Suzuki (東北大; 理研)<br> Kentaro Inui (東北大; 理研)<br>
+                        <td style="vertical-align: middle;"> Tatsuki Kuribayashi (Langsmith; 東北大)<br> Takumi Ito (Langsmith; 東北大)<br> Jun Suzuki (東北大; 理研)<br> Kentaro Inui (東北大; 理研)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="https://www.aclweb.org/anthology/2020.acl-main.47">Language Models as an Alternative Evaluator of Word Order Hypotheses: A Case Study in Japanese</a></td>
                     </tr>
@@ -1178,7 +1181,7 @@
                     <tr>
                         <td style="vertical-align: middle;">0</td>
                         <td style="vertical-align: middle;">STUDENT</td>
-                        <td style="vertical-align: middle;"> Hiroaki Funayama (東北大; 理研)<br> Shota Sasaki (東北大; 理研)<br> Yuichiroh Matsubayashi (東北大; 理研)<br> Tomoya Mizumoto (フューチャー; 理研)<br> Jun Suzuki (東北大; 理研)<br> Masato Mita (東北大; 理研)<br> Kentaro Inui (東北大; 理研)<br>
+                        <td style="vertical-align: middle;"> Hiroaki Funayama (東北大; 理研)<br> Shota Sasaki (東北大; 理研)<br> Yuichiroh Matsubayashi (東北大; 理研)<br> Tomoya Mizumoto (理研; フューチャー)<br> Jun Suzuki (東北大; 理研)<br> Masato Mita (東北大; 理研)<br> Kentaro Inui (東北大; 理研)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="https://www.aclweb.org/anthology/2020.acl-srw.32">Preventing Critical Scoring Errors in Short Answer Scoring with Confidence Estimation</a></td>
                     </tr>
@@ -1218,7 +1221,7 @@
                     <tr>
                         <td style="vertical-align: middle;">0</td>
                         <td style="vertical-align: middle;">SHORT</td>
-                        <td style="vertical-align: middle;"> Riku Kawamura (東工大)<br> Tatsuya Aoki (東工大)<br> Hidetaka Kamigaito (東工大)<br> Hiroya Takamura (東工大; 産総研)<br> Manabu Okumura (東工大)<br>
+                        <td style="vertical-align: middle;"> Riku Kawamura (東工大)<br> Tatsuya Aoki (東工大)<br> Hidetaka Kamigaito (東工大)<br> Hiroya Takamura (産総研; 東工大)<br> Manabu Okumura (東工大)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="https://www.aclweb.org/anthology/2020.coling-main.192">Neural text normalization leveraging similarities of strings and sounds</a></td>
                     </tr>
@@ -1250,7 +1253,7 @@
                     <tr>
                         <td style="vertical-align: middle;">0</td>
                         <td style="vertical-align: middle;">LONG</td>
-                        <td style="vertical-align: middle;"> Hideya Mino (東工大; NHK技研)<br> Hitoshi Ito (NHK技研)<br> Isao Goto (NHK技研)<br> Ichiro Yamada (NHK技研)<br> Takenobu Tokunaga (東工大)<br>
+                        <td style="vertical-align: middle;"> Hideya Mino (NHK技研; 東工大)<br> Hitoshi Ito (NHK技研)<br> Isao Goto (NHK技研)<br> Ichiro Yamada (NHK技研)<br> Takenobu Tokunaga (東工大)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="https://www.aclweb.org/anthology/2020.coling-main.396">Effective Use of Target-side Context for Neural Machine Translation</a></td>
                     </tr>
