--- a/2021.html
+++ b/2021.html
@@ -16,19 +16,22 @@
     <div class="col-lg-auto">
 
         <h1>日本所属の言語処理論文被引用数ランキング (2021年)</h1>
-        <p class="text-right">最終更新: 2022-04-16 14:41:01.280891+09:00</p>
+        <p class="text-right">最終更新: 2022-04-16 15:51:39.176395+09:00</p>
 
         <div>
             <p>日本の組織を所属とする者が、2021年に言語処理のトップカンファレンスもしくはトップ論文誌で発表した論文一覧です (<a href="2021.html">2021年版</a>、<a
                     href="2020.html">2020年版</a>、<a href="2019.html">2019年版</a>、<a href="2018.html">2018年版</a>、<a
-                    href="2017.html">2017年版</a>、<a href="2016.html">2016年版</a>)。対象は
+                    href="2017.html">2017年版</a>、<a href="2016.html">2016年版</a>、<a href="2015.html">2015年版</a>、<a
+                    href="2014.html">2014年版</a>)。対象は
                 TACL、ACL、EMNLP、NAACL、EACL です
                 (Findings は除外)。Industry、Student、Demo 論文も含みます。</p>
             <ul>
                 <li>被引用数A：第一著者に被引用数の半分を配分し、残りの半分は以降の著者で等分。</li>
                 <li>被引用数F：第一著者に被引用数の全部を配分します。</li>
                 <li>一人の著者に複数の所属がある場合は等分。</li>
-                <li>論文データは <a href="https://murawaki.org/misc/japan-nlp-2021.html">村脇先生のブログ</a> に機械的に従います。
+                
+                    <li>論文データは <a href="https://murawaki.org/misc/japan-nlp-2021.html">村脇先生のブログ</a> に機械的に従います。
+                
                 </li>
                 <li>被引用数データは <a href="https://api.semanticscholar.org/graph/v1">Semantic Scholar</a> より。</li>
                 <li>毎週月曜日朝５時に自動更新。</li>
@@ -368,7 +371,7 @@
                     <tr>
                         <td style="vertical-align: middle;">18</td>
                         <td style="vertical-align: middle;">SHORT</td>
-                        <td style="vertical-align: middle;"> Ikuya Yamada (Studio Ousia; 理研)<br> Akari Asai (ワシントン大)<br> Hannaneh Hajishirzi (ワシントン大; Allen Institute for AI)<br>
+                        <td style="vertical-align: middle;"> Ikuya Yamada (理研; Studio Ousia)<br> Akari Asai (ワシントン大)<br> Hannaneh Hajishirzi (Allen Institute for AI; ワシントン大)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="https://aclanthology.org/2021.acl-short.123/">Efficient Passage Retrieval with Hashing for Open-domain Question Answering</a></td>
                     </tr>
@@ -376,7 +379,7 @@
                     <tr>
                         <td style="vertical-align: middle;">17</td>
                         <td style="vertical-align: middle;">LONG</td>
-                        <td style="vertical-align: middle;"> Hao Cheng (Microsoft Research)<br> Xiaodong Liu (Microsoft Research)<br> Lis Pereira (お茶大)<br> Yaoliang Yu (Vector Institute; ウォータールー大)<br> Jianfeng Gao (Microsoft Research)<br>
+                        <td style="vertical-align: middle;"> Hao Cheng (Microsoft Research)<br> Xiaodong Liu (Microsoft Research)<br> Lis Pereira (お茶大)<br> Yaoliang Yu (ウォータールー大; Vector Institute)<br> Jianfeng Gao (Microsoft Research)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="https://aclanthology.org/2021.naacl-main.85/">Posterior Differential Regularization with f-divergence for Improving Model Robustness</a></td>
                     </tr>
@@ -472,7 +475,7 @@
                     <tr>
                         <td style="vertical-align: middle;">5</td>
                         <td style="vertical-align: middle;">LONG</td>
-                        <td style="vertical-align: middle;"> Fenia Christopoulou (マンチェスター大)<br> Makoto Miwa (産総研; 豊田工大)<br> Sophia Ananiadou (マンチェスター大)<br>
+                        <td style="vertical-align: middle;"> Fenia Christopoulou (マンチェスター大)<br> Makoto Miwa (豊田工大; 産総研)<br> Sophia Ananiadou (マンチェスター大)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="https://aclanthology.org/2021.naacl-main.2/">Distantly Supervised Relation Extraction with Sentence Reconstruction and Knowledge Base Priors</a></td>
                     </tr>
@@ -480,7 +483,7 @@
                     <tr>
                         <td style="vertical-align: middle;">5</td>
                         <td style="vertical-align: middle;">LONG</td>
-                        <td style="vertical-align: middle;"> Rob van der Goot (ITU)<br> Ibrahim Sharaf (Factmata)<br> Aizhan Imankulova (都立大)<br> Ahmet Üstün (フローニンゲン大)<br> Marija Stepanović (ITU)<br> Alan Ramponi (COSBI; トレント大)<br> Siti Oryza Khairunnisa (都立大)<br> Mamoru Komachi (都立大)<br> Barbara Plank (ITU)<br>
+                        <td style="vertical-align: middle;"> Rob van der Goot (ITU)<br> Ibrahim Sharaf (Factmata)<br> Aizhan Imankulova (都立大)<br> Ahmet Üstün (フローニンゲン大)<br> Marija Stepanović (ITU)<br> Alan Ramponi (トレント大; COSBI)<br> Siti Oryza Khairunnisa (都立大)<br> Mamoru Komachi (都立大)<br> Barbara Plank (ITU)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="https://aclanthology.org/2021.naacl-main.197/">From Masked Language Modeling to Translation: Non-English Auxiliary Tasks Improve Zero-shot Spoken Language Understanding</a></td>
                     </tr>
@@ -488,7 +491,7 @@
                     <tr>
                         <td style="vertical-align: middle;">5</td>
                         <td style="vertical-align: middle;">SHORT</td>
-                        <td style="vertical-align: middle;"> Haipeng Sun (JD; ハルピン工業大)<br> Rui Wang (上海交通大)<br> Kehai Chen (NICT)<br> Masao Utiyama (NICT)<br> Eiichiro Sumita (NICT)<br> Tiejun Zhao (ハルピン工業大)<br>
+                        <td style="vertical-align: middle;"> Haipeng Sun (ハルピン工業大; JD)<br> Rui Wang (上海交通大)<br> Kehai Chen (NICT)<br> Masao Utiyama (NICT)<br> Eiichiro Sumita (NICT)<br> Tiejun Zhao (ハルピン工業大)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="https://aclanthology.org/2021.naacl-main.311/">Self-Training for Unsupervised Neural Machine Translation in Unbalanced Training Data Scenarios</a></td>
                     </tr>
@@ -552,7 +555,7 @@
                     <tr>
                         <td style="vertical-align: middle;">3</td>
                         <td style="vertical-align: middle;">STUDENT</td>
-                        <td style="vertical-align: middle;"> Kazutoshi Shinoda (NII; 東大)<br> Saku Sugawara (NII)<br> Akiko Aizawa (NII; 東大)<br>
+                        <td style="vertical-align: middle;"> Kazutoshi Shinoda (東大; NII)<br> Saku Sugawara (NII)<br> Akiko Aizawa (東大; NII)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="https://aclanthology.org/2021.acl-srw.21/">Improving the Robustness of QA Models to Challenge Sets with Variational Question-Answer Pair Generation</a></td>
                     </tr>
@@ -576,7 +579,7 @@
                     <tr>
                         <td style="vertical-align: middle;">2</td>
                         <td style="vertical-align: middle;">LONG</td>
-                        <td style="vertical-align: middle;"> Ukyo Honda (NAIST; 理研)<br> Yoshitaka Ushiku (オムロン サイニックエックス)<br> Atsushi Hashimoto (オムロン サイニックエックス)<br> Taro Watanabe (NAIST)<br> Yuji Matsumoto (理研)<br>
+                        <td style="vertical-align: middle;"> Ukyo Honda (理研; NAIST)<br> Yoshitaka Ushiku (オムロン サイニックエックス)<br> Atsushi Hashimoto (オムロン サイニックエックス)<br> Taro Watanabe (NAIST)<br> Yuji Matsumoto (理研)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="https://www.aclweb.org/anthology/2021.eacl-main.323/">Removing Word-Level Spurious Alignment between Images and Pseudo-Captions in Unsupervised Image Captioning</a></td>
                     </tr>
@@ -616,7 +619,7 @@
                     <tr>
                         <td style="vertical-align: middle;">2</td>
                         <td style="vertical-align: middle;">LONG</td>
-                        <td style="vertical-align: middle;"> Jiajia Tang (杭州大)<br> Kang Li (杭州大)<br> Xuanyu Jin (杭州大)<br> Andrzej Cichocki (PAN; Skoltech)<br> Qibin Zhao (理研)<br> Wanzeng Kong (杭州大)<br>
+                        <td style="vertical-align: middle;"> Jiajia Tang (杭州大)<br> Kang Li (杭州大)<br> Xuanyu Jin (杭州大)<br> Andrzej Cichocki (Skoltech; PAN)<br> Qibin Zhao (理研)<br> Wanzeng Kong (杭州大)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="https://aclanthology.org/2021.acl-long.412/">CTFN: Hierarchical Learning for Multimodal Sentiment Analysis Using Coupled-Translation Fusion Network</a></td>
                     </tr>
@@ -632,7 +635,7 @@
                     <tr>
                         <td style="vertical-align: middle;">2</td>
                         <td style="vertical-align: middle;">SHORT</td>
-                        <td style="vertical-align: middle;"> Zhiwei Zhang (山梨大; 杭州電子大)<br> Jiyi Li (山梨大)<br> Fumiyo Fukumoto (山梨大)<br> Yanming Ye (杭州電子大)<br>
+                        <td style="vertical-align: middle;"> Zhiwei Zhang (杭州電子大; 山梨大)<br> Jiyi Li (山梨大)<br> Fumiyo Fukumoto (山梨大)<br> Yanming Ye (杭州電子大)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="https://aclanthology.org/2021.emnlp-main.290/">Abstract, Rationale, Stance: A Joint Model for Scientific Claim Verification</a></td>
                     </tr>
@@ -672,7 +675,7 @@
                     <tr>
                         <td style="vertical-align: middle;">1</td>
                         <td style="vertical-align: middle;">SHORT</td>
-                        <td style="vertical-align: middle;"> Makoto Morishita (NTT; 東北大)<br> Jun Suzuki (東北大)<br> Tomoharu Iwata (NTT)<br> Masaaki Nagata (NTT)<br>
+                        <td style="vertical-align: middle;"> Makoto Morishita (東北大; NTT)<br> Jun Suzuki (東北大)<br> Tomoharu Iwata (NTT)<br> Masaaki Nagata (NTT)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="https://www.aclweb.org/anthology/2021.eacl-main.214/">Context-aware Neural Machine Translation with Mini-batch Embedding</a></td>
                     </tr>
@@ -744,7 +747,7 @@
                     <tr>
                         <td style="vertical-align: middle;">1</td>
                         <td style="vertical-align: middle;">SHORT</td>
-                        <td style="vertical-align: middle;"> Kosuke Yamada (名大)<br> Ryohei Sasano (理研; 名大)<br> Koichi Takeda (名大)<br>
+                        <td style="vertical-align: middle;"> Kosuke Yamada (名大)<br> Ryohei Sasano (名大; 理研)<br> Koichi Takeda (名大)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="https://aclanthology.org/2021.acl-short.102/">Semantic Frame Induction using Masked Word Embeddings and Two-Step Clustering</a></td>
                     </tr>
@@ -752,7 +755,7 @@
                     <tr>
                         <td style="vertical-align: middle;">1</td>
                         <td style="vertical-align: middle;">SHORT</td>
-                        <td style="vertical-align: middle;"> Johannes Mario Meissner (東大)<br> Napat Thumwanit (東大)<br> Saku Sugawara (NII)<br> Akiko Aizawa (NII; 東大)<br>
+                        <td style="vertical-align: middle;"> Johannes Mario Meissner (東大)<br> Napat Thumwanit (東大)<br> Saku Sugawara (NII)<br> Akiko Aizawa (東大; NII)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="https://aclanthology.org/2021.acl-short.109/">Embracing Ambiguity: Shifting the Training Target of NLI Models</a></td>
                     </tr>
@@ -808,7 +811,7 @@
                     <tr>
                         <td style="vertical-align: middle;">1</td>
                         <td style="vertical-align: middle;">LONG</td>
-                        <td style="vertical-align: middle;"> Ryuto Konno (リクルート)<br> Shun Kiyono (東北大; 理研)<br> Yuichiroh Matsubayashi (東北大; 理研)<br> Hiroki Ouchi (NAIST; 理研)<br> Kentaro Inui (東北大; 理研)<br>
+                        <td style="vertical-align: middle;"> Ryuto Konno (リクルート)<br> Shun Kiyono (東北大; 理研)<br> Yuichiroh Matsubayashi (東北大; 理研)<br> Hiroki Ouchi (理研; NAIST)<br> Kentaro Inui (東北大; 理研)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="https://aclanthology.org/2021.emnlp-main.308/">Pseudo Zero Pronoun Resolution Improves Zero Anaphora Resolution</a></td>
                     </tr>
@@ -832,7 +835,7 @@
                     <tr>
                         <td style="vertical-align: middle;">0</td>
                         <td style="vertical-align: middle;">LONG</td>
-                        <td style="vertical-align: middle;"> Takuma Udagawa (東大)<br> Akiko Aizawa (NII; 東大)<br>
+                        <td style="vertical-align: middle;"> Takuma Udagawa (東大)<br> Akiko Aizawa (東大; NII)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="https://direct.mit.edu/tacl/article/doi/10.1162/tacl_a_00409/107278/Maintaining-Common-Ground-in-Dynamic-Environments">Maintaining Common Ground in Dynamic Environments</a></td>
                     </tr>
@@ -848,7 +851,7 @@
                     <tr>
                         <td style="vertical-align: middle;">0</td>
                         <td style="vertical-align: middle;">LONG</td>
-                        <td style="vertical-align: middle;"> Diptesh Kanojia (IIT Bomday; IITB-Monash Research Academy; モナシュ大)<br> Prashant Sharma (日立)<br> Sayali Ghodekar (RingCentral)<br> Pushpak Bhattacharyya (IIT Bombay)<br> Gholamreza Haffari (モナシュ大)<br> Malhar Kulkarni (IIT Bombay)<br>
+                        <td style="vertical-align: middle;"> Diptesh Kanojia (IIT Bomday; モナシュ大; IITB-Monash Research Academy)<br> Prashant Sharma (日立)<br> Sayali Ghodekar (RingCentral)<br> Pushpak Bhattacharyya (IIT Bombay)<br> Gholamreza Haffari (モナシュ大)<br> Malhar Kulkarni (IIT Bombay)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="https://www.aclweb.org/anthology/2021.eacl-main.288/">Cognition-aware Cognate Detection</a></td>
                     </tr>
@@ -864,7 +867,7 @@
                     <tr>
                         <td style="vertical-align: middle;">0</td>
                         <td style="vertical-align: middle;">LONG</td>
-                        <td style="vertical-align: middle;"> Kenichi Iwatsuki (東大)<br> Akiko Aizawa (NII; 東大)<br>
+                        <td style="vertical-align: middle;"> Kenichi Iwatsuki (東大)<br> Akiko Aizawa (東大; NII)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="https://www.aclweb.org/anthology/2021.eacl-main.304/">Communicative-Function-Based Sentence Classification for Construction of an Academic Formulaic Expression Database</a></td>
                     </tr>
@@ -1048,7 +1051,7 @@
                     <tr>
                         <td style="vertical-align: middle;">0</td>
                         <td style="vertical-align: middle;">SHORT</td>
-                        <td style="vertical-align: middle;"> Taichi Iki (NII; 総研大)<br> Akiko Aizawa (NII; 総研大)<br>
+                        <td style="vertical-align: middle;"> Taichi Iki (総研大; NII)<br> Akiko Aizawa (総研大; NII)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="https://aclanthology.org/2021.emnlp-main.167/">Effect of Visual Extensions on Natural Language Understanding in Vision-and-Language Models</a></td>
                     </tr>
