--- a/2017.html
+++ b/2017.html
@@ -16,7 +16,7 @@
     <div class="col-lg-auto">
 
         <h1>日本所属の言語処理論文被引用数ランキング (2017年)</h1>
-        <p class="text-right">最終更新: 2022-04-16 15:50:27.179978+09:00</p>
+        <p class="text-right">最終更新: 2022-04-16 16:05:25.821072+09:00</p>
 
         <div>
             <p>日本の組織を所属とする者が、2017年に言語処理のトップカンファレンスもしくはトップ論文誌で発表した論文一覧です (<a href="2021.html">2021年版</a>、<a
@@ -333,7 +333,7 @@
                     <tr>
                         <td style="vertical-align: middle;">99</td>
                         <td style="vertical-align: middle;">SHORT</td>
-                        <td style="vertical-align: middle;"> Rui Wang (NICT)<br> Masao Utiyama (NICT)<br> Lemao Liu (Tencent)<br> Kehai Chen (NICT; ハルビン工業大)<br> Eiichiro Sumita (NICT)<br>
+                        <td style="vertical-align: middle;"> Rui Wang (NICT)<br> Masao Utiyama (NICT)<br> Lemao Liu (Tencent)<br> Kehai Chen (ハルビン工業大; NICT)<br> Eiichiro Sumita (NICT)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="http://aclweb.org/anthology/D/D17/D17-1155">Instance Weighting for Neural Machine Translation Domain Adaptation</a></td>
                     </tr>
@@ -357,7 +357,7 @@
                     <tr>
                         <td style="vertical-align: middle;">82</td>
                         <td style="vertical-align: middle;">LONG</td>
-                        <td style="vertical-align: middle;"> Ikuya Yamada (Studio Ousia; 慶大)<br> Hiroyuki Shindo (NAIST)<br> Hideaki Takeda (NII)<br> Yoshiyasu Takefuji (慶大)<br>
+                        <td style="vertical-align: middle;"> Ikuya Yamada (慶大; Studio Ousia)<br> Hiroyuki Shindo (NAIST)<br> Hideaki Takeda (NII)<br> Yoshiyasu Takefuji (慶大)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="http://aclweb.org/anthology/Q/Q17/Q17-1028">Learning Distributed Representations of Texts and Entities from Knowledge Base</a></td>
                     </tr>
@@ -397,7 +397,7 @@
                     <tr>
                         <td style="vertical-align: middle;">62</td>
                         <td style="vertical-align: middle;">LONG</td>
-                        <td style="vertical-align: middle;"> Bofang Li (中国教育部; 人民大)<br> Tao Liu (中国教育部; 人民大)<br> Zhe Zhao (中国教育部; 人民大)<br> Buzhou Tang (ハルビン工業大)<br> Aleksandr Drozd (東工大)<br> Anna Rogers (マサチューセッツ大ローウェル)<br> Xiaoyong Du (中国教育部; 人民大)<br>
+                        <td style="vertical-align: middle;"> Bofang Li (人民大; 中国教育部)<br> Tao Liu (人民大; 中国教育部)<br> Zhe Zhao (人民大; 中国教育部)<br> Buzhou Tang (ハルビン工業大)<br> Aleksandr Drozd (東工大)<br> Anna Rogers (マサチューセッツ大ローウェル)<br> Xiaoyong Du (人民大; 中国教育部)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="http://aclweb.org/anthology/D/D17/D17-1256">Part-of-Speech Tagging for Twitter with Adversarial Neural Networks</a></td>
                     </tr>
@@ -445,7 +445,7 @@
                     <tr>
                         <td style="vertical-align: middle;">46</td>
                         <td style="vertical-align: middle;">LONG</td>
-                        <td style="vertical-align: middle;"> Yasuhide Miura (東工大; 富士ゼロックス)<br> Motoki Taniguchi (富士ゼロックス)<br> Tomoki Taniguchi (富士ゼロックス)<br> Tomoko Ohkuma (富士ゼロックス)<br>
+                        <td style="vertical-align: middle;"> Yasuhide Miura (富士ゼロックス; 東工大)<br> Motoki Taniguchi (富士ゼロックス)<br> Tomoki Taniguchi (富士ゼロックス)<br> Tomoko Ohkuma (富士ゼロックス)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="http://aclweb.org/anthology/P/P17/P17-1116">Unifying Text, Metadata, and User Network Representations with a Neural Network for Geolocation Prediction</a></td>
                     </tr>
@@ -461,7 +461,7 @@
                     <tr>
                         <td style="vertical-align: middle;">42</td>
                         <td style="vertical-align: middle;">LONG</td>
-                        <td style="vertical-align: middle;"> Soichiro Murakami (東工大; 産総研)<br> Akihiko Watanabe (東工大; 産総研)<br> Akira Miyazawa (総研大; 産総研; NII)<br> Keiichi Goshima (東工大; 産総研)<br> Toshihiko Yanase (日立)<br> Hiroya Takamura (東工大; 産総研)<br> Yusuke Miyao (総研大; 産総研; NII)<br>
+                        <td style="vertical-align: middle;"> Soichiro Murakami (産総研; 東工大)<br> Akihiko Watanabe (産総研; 東工大)<br> Akira Miyazawa (NII; 総研大; 産総研)<br> Keiichi Goshima (産総研; 東工大)<br> Toshihiko Yanase (日立)<br> Hiroya Takamura (産総研; 東工大)<br> Yusuke Miyao (NII; 総研大; 産総研)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="http://aclweb.org/anthology/P/P17/P17-1126">Learning to Generate Market Comments from Stock Prices</a></td>
                     </tr>
@@ -525,7 +525,7 @@
                     <tr>
                         <td style="vertical-align: middle;">20</td>
                         <td style="vertical-align: middle;">LONG</td>
-                        <td style="vertical-align: middle;"> Pascual Martínez-Gómez (産総研)<br> Koji Mineshima (お茶大)<br> Yusuke Miyao (さきがけ; 総研大; 産総研)<br> Daisuke Bekki (さきがけ; 産総研; お茶大)<br>
+                        <td style="vertical-align: middle;"> Pascual Martínez-Gómez (産総研)<br> Koji Mineshima (お茶大)<br> Yusuke Miyao (さきがけ; 総研大; 産総研)<br> Daisuke Bekki (お茶大; さきがけ; 産総研)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="http://aclweb.org/anthology/E/E17/E17-1067">On-demand Injection of Lexical Knowledge for Recognising Textual Entailment</a></td>
                     </tr>
@@ -533,7 +533,7 @@
                     <tr>
                         <td style="vertical-align: middle;">20</td>
                         <td style="vertical-align: middle;">LONG</td>
-                        <td style="vertical-align: middle;"> Hiroki Ouchi (理研; NAIST)<br> Hiroyuki Shindo (理研; NAIST)<br> Yuji Matsumoto (理研; NAIST)<br>
+                        <td style="vertical-align: middle;"> Hiroki Ouchi (NAIST; 理研)<br> Hiroyuki Shindo (NAIST; 理研)<br> Yuji Matsumoto (NAIST; 理研)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="http://aclweb.org/anthology/P/P17/P17-1146">Neural Modeling of Multi-Predicate Interactions for Japanese Predicate Argument Structure Analysis</a></td>
                     </tr>
@@ -597,7 +597,7 @@
                     <tr>
                         <td style="vertical-align: middle;">10</td>
                         <td style="vertical-align: middle;">LONG</td>
-                        <td style="vertical-align: middle;"> Yuki Arase (阪大; 産総研)<br> Jun&#39;ichi Tsujii (マンチェスター大; 産総研)<br>
+                        <td style="vertical-align: middle;"> Yuki Arase (産総研; 阪大)<br> Jun&#39;ichi Tsujii (マンチェスター大; 産総研)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="http://aclweb.org/anthology/D/D17/D17-1001">Monolingual Phrase Alignment on Parse Forests</a></td>
                     </tr>
