--- a/2016.html
+++ b/2016.html
@@ -16,7 +16,7 @@
     <div class="col-lg-auto">
 
         <h1>日本所属の言語処理論文被引用数ランキング (2016年)</h1>
-        <p class="text-right">最終更新: 2022-04-16 15:50:31.013195+09:00</p>
+        <p class="text-right">最終更新: 2022-04-16 16:05:28.428513+09:00</p>
 
         <div>
             <p>日本の組織を所属とする者が、2016年に言語処理のトップカンファレンスもしくはトップ論文誌で発表した論文一覧です (<a href="2021.html">2021年版</a>、<a
@@ -327,7 +327,7 @@
                     <tr>
                         <td style="vertical-align: middle;">179</td>
                         <td style="vertical-align: middle;">LONG</td>
-                        <td style="vertical-align: middle;"> Philip Arthur (NAIST)<br> Graham Neubig (NAIST; CMU)<br> Satoshi Nakamura (NAIST)<br>
+                        <td style="vertical-align: middle;"> Philip Arthur (NAIST)<br> Graham Neubig (CMU; NAIST)<br> Satoshi Nakamura (NAIST)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="http://aclweb.org/anthology/D/D16/D16-1162">Incorporating Discrete Translation Lexicons into Neural Machine Translation</a></td>
                     </tr>
@@ -431,7 +431,7 @@
                     <tr>
                         <td style="vertical-align: middle;">34</td>
                         <td style="vertical-align: middle;">LONG</td>
-                        <td style="vertical-align: middle;"> Qiaozi Gao (MSU)<br> Malcolm Doering (阪大; MSU)<br> Shaohua Yang (MSU)<br> Joyce Chai (MSU)<br>
+                        <td style="vertical-align: middle;"> Qiaozi Gao (MSU)<br> Malcolm Doering (MSU; 阪大)<br> Shaohua Yang (MSU)<br> Joyce Chai (MSU)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="http://aclweb.org/anthology/P/P16/P16-1171">Physical Causality of Action Verbs in Grounded Language Understanding</a></td>
                     </tr>
@@ -607,7 +607,7 @@
                     <tr>
                         <td style="vertical-align: middle;">14</td>
                         <td style="vertical-align: middle;">LONG</td>
-                        <td style="vertical-align: middle;"> Natsuda Laokulrat (産総研)<br> Sang Phan (NII)<br> Noriki Nishida (東大)<br> Raphael Shu (東大)<br> Yo Ehara (産総研)<br> Naoaki Okazaki (東北大; 産総研)<br> Yusuke Miyao (産総研; NII)<br> Hideki Nakayama (東大; 産総研)<br>
+                        <td style="vertical-align: middle;"> Natsuda Laokulrat (産総研)<br> Sang Phan (NII)<br> Noriki Nishida (東大)<br> Raphael Shu (東大)<br> Yo Ehara (産総研)<br> Naoaki Okazaki (東北大; 産総研)<br> Yusuke Miyao (NII; 産総研)<br> Hideki Nakayama (産総研; 東大)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="http://aclweb.org/anthology/C/C16/C16-1005">Generating Video Description using Sequence-to-sequence Model with Temporal Attention</a></td>
                     </tr>
@@ -767,7 +767,7 @@
                     <tr>
                         <td style="vertical-align: middle;">5</td>
                         <td style="vertical-align: middle;">LONG</td>
-                        <td style="vertical-align: middle;"> Pascual Martínez-Gómez (産総研)<br> Yusuke Miyao (NII; 総研大; 産総研)<br>
+                        <td style="vertical-align: middle;"> Pascual Martínez-Gómez (産総研)<br> Yusuke Miyao (NII; 産総研; 総研大)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="http://aclweb.org/anthology/D/D16/D16-1002">Rule Extraction for Tree-to-Tree Transducers by Cost Minimization</a></td>
                     </tr>
@@ -831,7 +831,7 @@
                     <tr>
                         <td style="vertical-align: middle;">3</td>
                         <td style="vertical-align: middle;">LONG</td>
-                        <td style="vertical-align: middle;"> Sang Phan (NII)<br> Yusuke Miyao (NII)<br> Duy-Dinh Le (UIT (Vietnam); NII)<br> Shin&#39;ichi Satoh (NII)<br>
+                        <td style="vertical-align: middle;"> Sang Phan (NII)<br> Yusuke Miyao (NII)<br> Duy-Dinh Le (NII; UIT (Vietnam))<br> Shin&#39;ichi Satoh (NII)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="http://aclweb.org/anthology/C/C16/C16-1313">Video Event Detection by Exploiting Word Dependencies from Image Captions</a></td>
                     </tr>
@@ -967,7 +967,7 @@
                     <tr>
                         <td style="vertical-align: middle;">1</td>
                         <td style="vertical-align: middle;">DEMO</td>
-                        <td style="vertical-align: middle;"> Tatsuya Iwanari (東大)<br> Kohei Ohara (東大)<br> Naoki Yoshinaga (東大)<br> Nobuhiro Kaji (Yahoo)<br> Masashi Toyoda (東大)<br> Masaru Kitsuregawa (東大; NII)<br>
+                        <td style="vertical-align: middle;"> Tatsuya Iwanari (東大)<br> Kohei Ohara (東大)<br> Naoki Yoshinaga (東大)<br> Nobuhiro Kaji (Yahoo)<br> Masashi Toyoda (東大)<br> Masaru Kitsuregawa (NII; 東大)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="http://aclweb.org/anthology/C/C16/C16-2061">Kotonush: Understanding Concepts Based on Values behind Social Media</a></td>
                     </tr>
@@ -1015,7 +1015,7 @@
                     <tr>
                         <td style="vertical-align: middle;">0</td>
                         <td style="vertical-align: middle;">LONG</td>
-                        <td style="vertical-align: middle;"> Hajime Senuma (東大; NII)<br> Akiko Aizawa (東大; NII)<br>
+                        <td style="vertical-align: middle;"> Hajime Senuma (NII; 東大)<br> Akiko Aizawa (NII; 東大)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="http://aclweb.org/anthology/C/C16/C16-1261">Learning Succinct Models: Pipelined Compression with L1-Regularization, Hashing, Elias-Fano Indices, and Quantization</a></td>
                     </tr>
