--- a/2019.html
+++ b/2019.html
@@ -16,7 +16,7 @@
     <div class="col-lg-auto">
 
         <h1>日本所属の言語処理論文被引用数ランキング (2019年)</h1>
-        <p class="text-right">最終更新: 2022-04-16 16:05:33.054666+09:00</p>
+        <p class="text-right">最終更新: 2022-04-18 05:07:59.283316+09:00</p>
 
         <div>
             <p>日本の組織を所属とする者が、2019年に言語処理のトップカンファレンスもしくはトップ論文誌で発表した論文一覧です (<a href="2021.html">2021年版</a>、<a
@@ -109,7 +109,7 @@
                     </tr>
                 
                     <tr>
-                        <td style="vertical-align: middle;">44.9</td>
+                        <td style="vertical-align: middle;">45.0</td>
                         <td style="vertical-align: middle;">52.0</td>
                         <td style="vertical-align: middle;">京大</td>
                     </tr>
@@ -313,9 +313,9 @@
                     </tr>
                 
                     <tr>
-                        <td style="vertical-align: middle;">76</td>
+                        <td style="vertical-align: middle;">78</td>
                         <td style="vertical-align: middle;">LONG</td>
-                        <td style="vertical-align: middle;"> Richard Futrell (UC Irvine)<br> Ethan Wilcox (Harvard)<br> Takashi Morita (京大; MIT)<br> Peng Qian (MIT)<br> Miguel Ballesteros (IBM)<br> Roger Levy (MIT)<br>
+                        <td style="vertical-align: middle;"> Richard Futrell (UC Irvine)<br> Ethan Wilcox (Harvard)<br> Takashi Morita (MIT; 京大)<br> Peng Qian (MIT)<br> Miguel Ballesteros (IBM)<br> Roger Levy (MIT)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="https://www.aclweb.org/anthology/N19-1004">Neural language models as psycholinguistic subjects: Representations of syntactic state</a></td>
                     </tr>
@@ -411,7 +411,7 @@
                     <tr>
                         <td style="vertical-align: middle;">32</td>
                         <td style="vertical-align: middle;">LONG</td>
-                        <td style="vertical-align: middle;"> Hayate Iso (NAIST)<br> Yui Uehara (産総研)<br> Tatsuya Ishigaki (産総研; 東工大)<br> Hiroshi Noji (産総研)<br> Eiji Aramaki (産総研; NAIST)<br> Ichiro Kobayashi (お茶大; 産総研)<br> Yusuke Miyao (東大; 産総研)<br> Naoaki Okazaki (産総研; 東工大)<br> Hiroya Takamura (産総研; 東工大)<br>
+                        <td style="vertical-align: middle;"> Hayate Iso (NAIST)<br> Yui Uehara (産総研)<br> Tatsuya Ishigaki (産総研; 東工大)<br> Hiroshi Noji (産総研)<br> Eiji Aramaki (産総研; NAIST)<br> Ichiro Kobayashi (産総研; お茶大)<br> Yusuke Miyao (産総研; 東大)<br> Naoaki Okazaki (産総研; 東工大)<br> Hiroya Takamura (産総研; 東工大)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="https://www.aclweb.org/anthology/P19-1202">Learning to Select, Track, and Generate for Data-to-Text</a></td>
                     </tr>
@@ -483,7 +483,7 @@
                     <tr>
                         <td style="vertical-align: middle;">23</td>
                         <td style="vertical-align: middle;">LONG</td>
-                        <td style="vertical-align: middle;"> Xiaoyu Shen (マックス・プランク情報学研究所; ザールラント大)<br> Jun Suzuki (東北大; 理研)<br> Kentaro Inui (東北大; 理研)<br> Hui Su (テンセント)<br> Dietrich Klakow (ザールラント大)<br> Satoshi Sekine (理研)<br>
+                        <td style="vertical-align: middle;"> Xiaoyu Shen (ザールラント大; マックス・プランク情報学研究所)<br> Jun Suzuki (東北大; 理研)<br> Kentaro Inui (東北大; 理研)<br> Hui Su (テンセント)<br> Dietrich Klakow (ザールラント大)<br> Satoshi Sekine (理研)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="https://www.aclweb.org/anthology/D19-1054">Select and Attend: Towards Controllable Content Selection in Text Generation</a></td>
                     </tr>
@@ -539,7 +539,7 @@
                     <tr>
                         <td style="vertical-align: middle;">19</td>
                         <td style="vertical-align: middle;">LONG</td>
-                        <td style="vertical-align: middle;"> Xiaoyu Shen (マックスプランク情報学研究所; ザールラント大)<br> Yang Zhao (東大)<br> Hui Su (テンセント)<br> Dietrich Klakow (ザールラント大)<br>
+                        <td style="vertical-align: middle;"> Xiaoyu Shen (ザールラント大; マックスプランク情報学研究所)<br> Yang Zhao (東大)<br> Hui Su (テンセント)<br> Dietrich Klakow (ザールラント大)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="https://www.aclweb.org/anthology/D19-1390">Improving Latent Alignment in Text Summarization by Generalizing the Pointer Generator</a></td>
                     </tr>
@@ -579,7 +579,7 @@
                     <tr>
                         <td style="vertical-align: middle;">16</td>
                         <td style="vertical-align: middle;">LONG</td>
-                        <td style="vertical-align: middle;"> Takashi Wada (NAIST)<br> Tomoharu Iwata (理研; NTT)<br> Yuji Matsumoto (NAIST; 理研)<br>
+                        <td style="vertical-align: middle;"> Takashi Wada (NAIST)<br> Tomoharu Iwata (NTT; 理研)<br> Yuji Matsumoto (NAIST; 理研)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="https://www.aclweb.org/anthology/P19-1300">Unsupervised Multilingual Word Embedding with Limited Resources using Neural Language Models</a></td>
                     </tr>
@@ -611,7 +611,7 @@
                     <tr>
                         <td style="vertical-align: middle;">13</td>
                         <td style="vertical-align: middle;">SHORT</td>
-                        <td style="vertical-align: middle;"> Mingming Yang (ハルビン工業大)<br> Rui Wang (NICT)<br> Kehai Chen (NICT)<br> Masao Utiyama (NICT)<br> Eiichiro Sumita (NICT)<br> Min Zhang (ハルビン工業大; 蘇州大)<br> Tiejun Zhao (ハルビン工業大)<br>
+                        <td style="vertical-align: middle;"> Mingming Yang (ハルビン工業大)<br> Rui Wang (NICT)<br> Kehai Chen (NICT)<br> Masao Utiyama (NICT)<br> Eiichiro Sumita (NICT)<br> Min Zhang (蘇州大; ハルビン工業大)<br> Tiejun Zhao (ハルビン工業大)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="https://www.aclweb.org/anthology/P19-1296">Sentence-Level Agreement for Neural Machine Translation</a></td>
                     </tr>
@@ -627,7 +627,7 @@
                     <tr>
                         <td style="vertical-align: middle;">12</td>
                         <td style="vertical-align: middle;">LONG</td>
-                        <td style="vertical-align: middle;"> Takuma Ebisu (NII; 総研大)<br> Ryutaro Ichise (産総研; 総研大; NII)<br>
+                        <td style="vertical-align: middle;"> Takuma Ebisu (総研大; NII)<br> Ryutaro Ichise (産総研; 総研大; NII)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="https://www.aclweb.org/anthology/N19-1104">Graph Pattern Entity Ranking Model for Knowledge Graph Completion</a></td>
                     </tr>
@@ -747,7 +747,7 @@
                     <tr>
                         <td style="vertical-align: middle;">8</td>
                         <td style="vertical-align: middle;">LONG</td>
-                        <td style="vertical-align: middle;"> Ryo Nagata (甲南大; JST)<br>
+                        <td style="vertical-align: middle;"> Ryo Nagata (JST; 甲南大)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="https://www.aclweb.org/anthology/D19-1316">Toward a Task of Feedback Comment Generation for Writing Learning</a></td>
                     </tr>
@@ -755,7 +755,7 @@
                     <tr>
                         <td style="vertical-align: middle;">8</td>
                         <td style="vertical-align: middle;">SHORT</td>
-                        <td style="vertical-align: middle;"> Kazuma Kadowaki (NICT; 日本総研)<br> Ryu Iida (NAIST; NICT)<br> Kentaro Torisawa (NAIST; NICT)<br> Jong-Hoon Oh (NICT)<br> Julien Kloetzer (NICT)<br>
+                        <td style="vertical-align: middle;"> Kazuma Kadowaki (日本総研; NICT)<br> Ryu Iida (NAIST; NICT)<br> Kentaro Torisawa (NAIST; NICT)<br> Jong-Hoon Oh (NICT)<br> Julien Kloetzer (NICT)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="https://www.aclweb.org/anthology/D19-1590">Event Causality Recognition Exploiting Multiple Annotators’ Judgments and Background Knowledge</a></td>
                     </tr>
@@ -811,7 +811,7 @@
                     <tr>
                         <td style="vertical-align: middle;">6</td>
                         <td style="vertical-align: middle;">LONG</td>
-                        <td style="vertical-align: middle;"> Jong-Hoon Oh (NICT)<br> Kazuma Kadowaki (NICT; 日本総研)<br> Julien Kloetzer (NICT)<br> Ryu Iida (NAIST; NICT)<br> Kentaro Torisawa (NAIST; NICT)<br>
+                        <td style="vertical-align: middle;"> Jong-Hoon Oh (NICT)<br> Kazuma Kadowaki (日本総研; NICT)<br> Julien Kloetzer (NICT)<br> Ryu Iida (NAIST; NICT)<br> Kentaro Torisawa (NAIST; NICT)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="https://www.aclweb.org/anthology/P19-1414">Open-Domain Why-Question Answering with Adversarial Learning to Encode Answer Texts</a></td>
                     </tr>
@@ -1019,7 +1019,7 @@
                     <tr>
                         <td style="vertical-align: middle;">2</td>
                         <td style="vertical-align: middle;">SHORT</td>
-                        <td style="vertical-align: middle;"> Kurt Junshean Espinosa (フィリピン大セブ校; マンチェスター大)<br> Makoto Miwa (産総研; 豊田工大)<br> Sophia Ananiadou (マンチェスター大)<br>
+                        <td style="vertical-align: middle;"> Kurt Junshean Espinosa (マンチェスター大; フィリピン大セブ校)<br> Makoto Miwa (産総研; 豊田工大)<br> Sophia Ananiadou (マンチェスター大)<br>
                         </td>
                         <td style="vertical-align: middle;"><a href="https://www.aclweb.org/anthology/D19-1381">A Search-based Neural Model for Biomedical Nested and Overlapping Event Detection</a></td>
                     </tr>
